# ic-auth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-dockers.yml
rs/ic_auth_types/: Cargo.toml  README.md
rs/ic_auth_types/src/: bytes.rs  cbor.rs  lib.rs  xid.rs
rs/ic_auth_verifier/: Cargo.toml  README.md
rs/ic_auth_verifier/src/: asn1.rs  deeplink.rs  envelope.rs  ic_signature_verification.rs  identity.rs  lib.rs
rs/ic_auth_verify_server/: Cargo.toml  Dockerfile  README.md
rs/ic_auth_verify_server/src/: content.rs  main.rs
ts/ic-auth/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
ts/ic-auth/src/: cbor.test.ts  cbor.ts  identity.test.ts  identity.ts  index.ts  types.test.ts  types.ts
