[workspace]
members = ["rs/ic_auth_types", "rs/ic_auth_verifier"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ldclabs/ic-auth"
keywords = ["config", "cbor", "canister", "icp", "encryption"]
description = "🔏 The Internet Computer identity based web authentication."
categories = ["web-programming"]
license = "MIT"

[workspace.dependencies]
candid = "0.10"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
k256 = { version = "0.13" }
p256 = { version = "0.13" }
ed25519-dalek = "2"
sha2 = "0.10"
sha3 = "0.10"
ic-canister-sig-creation = "1.2"
ic-signature-verification = "0.2"
simple_asn1 = "0.6"
