[workspace]
members = [
  "rs/ic_auth_types",
  "rs/ic_auth_verifier",
  "rs/ic_auth_verify_server",
]
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2024"
repository = "https://github.com/ldclabs/ic-auth"
keywords = ["auth", "identity", "deeplink", "icp", "canister"]
description = "🔏 The Internet Computer identity based web authentication."
categories = ["web-programming"]
license = "MIT"

[workspace.dependencies]
arc-swap = "1.9"
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
hex = "0.4"
http = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_cbor = "0.11"
k256 = { version = "0.13" }
p256 = { version = "0.13" }
ed25519-dalek = "2"
rand = "0.10"
sha2 = "0.11"
sha3 = "0.11"
ic-certification = "3.1"
ic-certificate-verification = "3.1"
ic-canister-sig-creation = "1.3"
ic-agent = "0.47"
simple_asn1 = "0.6"
xid = "1.1"
url = "2.5"
