[package]
name = "ic_auth_types"
description = "A Rust types library used for integrating with IC-Auth."
publish = true
repository = "https://github.com/ldclabs/ic-auth/tree/main/src/ic_auth_types"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
xid = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
full = ["xid"]
xid = ["dep:xid"]
