[package]
name = "ic_auth_verifier"
description = "A Rust library used for integrating with IC-Auth."
publish = true
repository = "https://github.com/ldclabs/ic-auth/tree/main/src/ic_auth_verifier"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ic_auth_types = { path = "../ic_auth_types", version = "0.1" }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
p256 = { workspace = true }
ed25519-dalek = { workspace = true }
ic-canister-sig-creation = { workspace = true }
simple_asn1 = { workspace = true }
ic-signature-verification = { workspace = true, optional = true }
http = { version = "1.2", optional = true }
base64 = { version = "0.22", optional = true }
ic-agent = { version = "0.39", optional = true }

[dev-dependencies]
const-hex = "1"
ic-agent = "0.39"
ed25519-consensus = "2.1"
rand = "0.9"

[features]
# should not include envelope feature for canister
default = []
full = ["envelope"]
envelope = [
  "dep:http",
  "dep:base64",
  "dep:ic-agent",
  "dep:ic-signature-verification",
]
